# ax-server

./: .dockerignore  .env.example  .env.production  .gitignore  API.md  Dockerfile  README.md  ax_dapp.code-workspace  check_node.py  check_spot_markets.py  debug_api.py  debug_lp_logic.py  docker-compose.questdb.prod.yml  docker-compose.questdb.yml  docker-compose.yml  fetch_nodes.py  fix_dockerfile.py  pyproject.toml  scratch_debug.py  scratch_debug_erc20.py  scratch_debug_pool.py  setup_nginx_proxy.sh  test_endpoints.py  test_lp.py  test_tvl.py  test_tvl2.py  update_cors.sh
abis/: account_nft.json  core_proxy.json  erc20.json  event_based_prediction_market.json  multicall3.json  oracle_manager.json  spot_market_proxy.json  uma_finder.json  uma_optimistic_oracle.json  uniswap_v2_factory.json  uniswap_v2_pair.json  uniswap_v2_router.json
app/: __init__.py  config.py  deps.py  main.py
app/agents/: __init__.py  base.py  execution_agent.py  listener_agent.py  market_agent.py
app/api/v1/: admin.py  agent.py  auth.py  health.py  (+15 more)
app/auth/: __init__.py  deps.py  siwe.py  tokens.py
app/chain/: __init__.py  contracts.py  eip7412.py  multicall.py  prediction_deployer.py  provider.py  subgraph.py  synthetix.py  uma.py  uniswap_v2.py
app/middleware/: errors.py  rate_limit.py
app/models/: __init__.py  agent.py  market.py  position.py  trading.py
app/services/: portfolio_service.py  price_ingest.py  price_service.py  questdb_client.py
data/: markets_registry.json
deploy/: ax-server.service
tests/: test_auth.py  test_exchange_api.py  test_health.py  test_history.py
(+1 files in other folders)
