[project]
name = "ax-server"
version = "0.1.0"
description = "AthleteX DeFi/Sports Prediction Platform - Agentic Backend Server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "web3>=7.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "firebase-admin>=6.5.0",
    "asyncpg>=0.30.0",
    "questdb>=2.0.0",
    "python-multipart>=0.0.9",
    "eth-account>=0.13.0",
    "PyJWT>=2.8.0",
    "questdb>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
